<resources>
    <string name="app_name">PassLock</string>
    <string name="enter_a_new_passlock">Enter a New PassLock</string>
    <string name="view_previous_passlocks">View Previous PassLocks</string>
    <string name="suggest_passlocks">Suggest PassLocks</string>
    <string name="compare_passlocks">Compare Passlocks</string>
    <string name="view_password_tips">View Password Tips</string>
    <string name="passlock">PassLock</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="passlock_login"><![CDATA[PASSLOCK <Login>]]></string>
    <string name="username"><![CDATA[> username]]></string>
    <string name="password"><![CDATA[> password]]></string>
    <string name="enter">ENTER</string>
    <string name="test_a_password">Test a Password</string>
    <string name="log_out">Log Out</string>
    <string name="enter_password">Enter password</string>
    <string name="test_strength">Test Strength</string>
    <string name="score">Score:</string>
    <string name="feedback">Feedback:</string>
    <string name="back_to_landing_page">Back to Landing Page</string>
    <string name="your_saved_passlocks">Your Saved PassLocks</string>
    <string name="exit_admin">EXIT ADMIN</string>
    <string name="compare_user_passlocks">COMPARE USER PASSLOCKS</string>
    <string name="admin_console_passlock">ADMIN CONSOLE // PASSLOCK</string>
    <string name="user_passlocks"><![CDATA[> USER PASSLOCKS]]></string>
    <string name="select_a_user_to_inspect_or_delete">Select a user to inspect or delete.</string>
    <string name="back_to_admin">BACK TO ADMIN</string>
    <string name="save_passlock">Save PassLock</string>
    <string name="password2">Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="service_name_e_g_google">Service Name (e.g., Google)</string>
    <string name="passlock_system_v1_0"><![CDATA[> PASSLOCK SYSTEM v1.0]]></string>
    <string name="secure_encrypt_protect_nyour_digital_vault_awaits">Secure. Encrypt. Protect.\nYour digital vault awaits.</string>
    <string name="passlock_access">PASSLOCK ACCESS</string>
    <string name="enter_system">ENTER SYSTEM</string>
    <string name="create_account2">CREATE ACCOUNT</string>
    <string name="passlock_suggestions"><![CDATA[> PASSLOCK SUGGESTIONS]]></string>
    <string name="enable_disable_suggestions_and_regenerate_for_users">Enable/disable suggestions and regenerate for users.</string>
    <string name="toggle_all_suggestions">TOGGLE ALL SUGGESTIONS</string>
    <string name="back_to_admin2">BACK TO ADMIN</string>
    <string name="password_strength_overview"><![CDATA[> PASSWORD STRENGTH OVERVIEW]]></string>
    <string name="compare_users_by_overall_password_grade">Compare users by overall password grade.</string>
    <string name="back_to_admin3">BACK TO ADMIN</string>
    <string name="password_safety_tips">Password Safety Tips</string>
    <string name="send_notification">Send Notification</string>
</resources>